# evosuite-agents

./: README.md  pyproject.toml
examples/: capability_manifest_example.json
src/evosuite_agents/: __init__.py  registry.py  router.py
src/evosuite_agents/capabilities/: schema.py
