[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evosuite-agents"
version = "0.1.0"
description = "EvoSuite Agentic Layer: MCP-based multi-agent orchestration and capability routing"
authors = [{name="EvoSuite Team"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "evosuite-core>=0.2,<0.3",
    "evosuite-providers>=0.2,<0.3",
    "pydantic>=2.0",
    "httpx",
    "anyio",
    "typing-extensions"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "isort",
  "flake8",
  "mypy"
]

[project.entry-points."evosuite.plugins"]
# Agents may expose helper plugins later

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"